# sconv

./: .gitignore  Cargo.toml
data/: sconfig.yml  test.xlsx
src/: cli.rs  config.rs  file.rs  lib.rs  main.rs  printer.rs  settings.rs  table.rs
src/cli/: cmd.rs
src/cli/cmd/: config.rs  convert.rs
src/file/: csv.rs  excel.rs
testdata/: sconfig.yml  test_all_valid.xlsx  test_with_invalid.xlsx
tests/: cli.rs
