[package]
name = "sconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.4", features = ["derive"]}
anyhow = "1.0"
enum_dispatch = "0.3"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
